# pveclib

./: .travis.yml  configure.ac
doc/: pveclibmaindox.h
src/: vec_int512_runtime.c  vec_runtime_DYN.c  vec_runtime_PWR7.c  vec_runtime_PWR9.c
src/pveclib/: vec_bcd_ppc.h  vec_char_ppc.h  vec_common_ppc.h  vec_f64_ppc.h  vec_int128_ppc.h  vec_int16_ppc.h  vec_int32_ppc.h  vec_int512_ppc.h  vec_int64_ppc.h
src/testsuite/: arith128_print.c  arith128_test_bcd.c  arith128_test_i16.c  arith128_test_i32.c  arith128_test_i512.c  arith128_test_i64.c  vec_f128_dummy.c  vec_f32_dummy.c  vec_int128_dummy.c  vec_int64_dummy.c  vec_perf_i512.c  vec_pwr9_dummy.c
